--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,2 +1,4 @@
 employee-service.defaultFirstName: DefaultFirst
 employee-service.defaultLastName: DefaultLast
+
+#Access using url: http://localhost:8888/employee-service/default
