--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,4 +1,5 @@
 employee-service.defaultFirstName: DefaultFirst
 employee-service.defaultLastName: DefaultLast
+test.timeout.millis=120
 
 #Access using url: http://localhost:8888/employee-service/default
