--- a/employee-service.yml
+++ b/employee-service.yml
@@ -43,7 +43,7 @@ spring:
   profiles: qa
    
 employee-service:
-  defaultFirstName: DefaultFirst-QAAssurance
+  defaultFirstName: DefaultFirst-Quality
   defaultLastName: DefaultLast-QAAssurance
 
 ---
