--- a/employee-service.yml
+++ b/employee-service.yml
@@ -17,7 +17,7 @@ spring:
   flyway:
     baseline-on-migrate: true
   rabbitmq:
-    host: http://10.142.128.48
+    host: 10.142.128.48
     port: 5672
     username: guest
     password: guest
