--- a/employee-service.yml
+++ b/employee-service.yml
@@ -47,7 +47,7 @@ spring:
   profiles: qa
    
 employee-service:
-  defaultFirstName: DefaultFirst-Quality
+  defaultFirstName: DefaultFirst-QualityAssurance
   defaultLastName: DefaultLast-QAAssurance
 
 ---
